--- a/music/package.json
+++ b/music/package.json
@@ -9,12 +9,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "firebase": "^10.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "spotify-web-api-js": "^1.5.2",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.21"
   },
