--- a/music/package.json
+++ b/music/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "spotify-web-api-js": "^1.5.2",
