--- a/music/package.json
+++ b/music/package.json
@@ -18,6 +18,7 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "spotify-web-api-js": "^1.5.2",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.22"
