--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.2.3",
+    "mongoose": "^8.4.0",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
