--- a/music/package.json
+++ b/music/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.1.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.0",
