--- a/music/package.json
+++ b/music/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^5.3.3",
     "firebase": "^10.9.0",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.1.0",
